# barrita

./: Cargo.toml  build.rs
src/: main.rs  popup.rs  status_updater.rs
src/app/: mod.rs
src/app/battery/: common.rs  mod.rs  windows.rs
src/app/media/: fallback.rs  linux.rs  mod.rs  windows.rs
src/app/network/: mod.rs  windows.rs
src/app/processes/: mod.rs  windows.rs
src/app/time/: common.rs  mod.rs
src/app/volume/: mod.rs  volume.rs
src/app/workspaces/: komorebi.rs  mod.rs
src/core/: data.rs  mod.rs
src/media/: mod.rs  mpris.rs  windows.rs
src/platform/: mod.rs  tray.rs
src/platform/windows/: app_bar.rs  appbar.rs  config.rs  init.rs  mod.rs  position_monitor.rs
src/statusbar/: app_bar.rs  mod.rs
src/system/: battery.rs  mod.rs  network.rs  processes.rs  time.rs  volume.rs
src/ui/: app.slint  status_bar.slint
src/ui/styles/: theme.slint
src/ui/widgets/: battery.slint  bluetooth.slint  clock.slint  colorize.slint  media_player.slint  music_icon.slint  network.slint  processes.slint  screenshot.slint  volume.slint  workspaces.slint
ui/: status_bar.slint
ui/styles/: theme.slint
ui/widgets/: battery.slint  bluetooth.slint  clock.slint  colorize.slint  media_player.slint  music_icon.slint  music_popup.slint  network.slint  screenshot.slint  volume.slint  workspaces.slint
