[package]
name = "barrita"
version = "0.1.0"
edition = "2024"

[dependencies]
slint = { version = "1.15.1", features = ["renderer-winit-skia","renderer-winit-femtovg"] }
sysinfo = "0.32"
battery = "0.7.8"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
thiserror = "2"
winit = "0.30"
image = "0.25"

[target.'cfg(target_os = "windows")'.dependencies]
volumecontrol = "0.1"
windows = { version = "0.62", features = ["Win32_UI_Input_KeyboardAndMouse", "Win32_Foundation", "Media_Control", "Storage_Streams", "Storage"] }

[target.'cfg(target_os = "linux")'.dependencies]
mpris = "2.0"
zbus = "4"

[build-dependencies]
slint-build = "1.15.1"